@@ -79,6 +79,7 @@ extern const TCHAR szProfileExternalWind[];
 extern const TCHAR *szProfileAirspacePriority[];
 extern const TCHAR szProfileAirspaceWarning[];
 extern const TCHAR szProfileAirspaceBlackOutline[];
+extern const TCHAR szProfileAirspaceFillMode[];
 extern const TCHAR szProfileWarningTime[];
 extern const TCHAR szProfileAcknowledgementTime[];
 extern const TCHAR szProfileCircleZoom[];
